--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
+/* Reset Styles */
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding:0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font-family:'montserrat', sans-serif;
+  background-color: rgb(33, 33, 77);
+}
+
+header{
+  padding: 50px 15px 0;
+}
+
+h1{
+  color: #ffffff;
+  font-size: 48px;
+  font-weight: 500;
+  text-align: center;
 }
