--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,37 @@ input{
 }
 
 .results{
-  background-color: darkgrey;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0px -15px;
+}
+
+.results .result {
+  width: 33.33333%;
+  min-width: 200px;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.results .result img {
+  display: block;
+  width: 100%;
+}
+
+.results .result h3 {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+  padding: 10px;
+  background: #445565;
+  flex: 1 1 100%;
+  transition: 0.4s ease-out;
+}
+
+.results .result h3:hover {
+  background: #fff;
+  color: #445565;
 }
 
